--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
  </div>
 </div>
 <div class="rotation-container">
-    <span><div class="letter">JOIN FAST</div></span>
+    <span><div class="letter">JOIN FAST- WHAT ARE U WAITING FOR-BECOME A PRO CODER</div></span>
 </div>
 </body>
 </html>
