--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
     <img src="graphics.jpg" alt="Rotated Image" class="rotate-image" width="800" height="800">
  </div>
 </div>
+        <footer class="footer">
+    <p>JOIN FAST ! WHAT ARE U WAITING FOR - BECOME A PRO CODER</p>
+</footer>
 </body>
 </html>
 </body>
